# Django-start-template

./: pyproject.toml
django_project/: settings.py  urls.py
pages/: urls.py  views.py
rooster/: models.py  urls.py  views.py
rooster/migrations/: 0001_initial.py
templates/: _base.html  urls.py  views.py
templates/pages/: about_us.html  home.html
